[gd_scene load_steps=14 format=2]

[ext_resource path="res://JetpackGameMode/Character/Bullet.gd" type="Script" id=1]
[ext_resource path="res://JetpackGameMode/Character/Fxs/FullLaser.png" type="Texture" id=2]
[ext_resource path="res://JetpackGameMode/Character/Fxs/LaserParticle.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 715, 12 )

[sub_resource type="Gradient" id=2]

offsets = PoolRealArray( 0, 0.0807692, 0.946154, 0.996154, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.107692, 1, 1, 1, 0 )

[sub_resource type="Animation" id=3]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 715, 0 ), Vector2( 715, 0 ), Vector2( -685, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LaserBody:scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1.5 ), Vector2( 1, 0.3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LaserTip:scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1.5 ), Vector2( 1, 0.3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LaserParticlesTop:modulate:a")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LaserParticlesBottom:modulate:a")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LaserTip:region_rect")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 1418, 0, 14, 24 ), Rect2( 1418, 0, 14, 24 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LaserTip:position")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1425, 0 ), Vector2( 1425, 0 ), Vector2( 23, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LaserBody:position")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 709, 0 ), Vector2( 709, 0 ), Vector2( 8, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("LaserBody:region_rect")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 1418, 24 ), Rect2( 0, 0, 1418, 24 ), Rect2( 0, 0, 16, 24 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("LaserTip:modulate:a")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("LaserBody:modulate:a")
tracks/10/interp = 1
tracks/10/imported = false
tracks/10/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=4]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -685, 0 ), Vector2( 715, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_idle_timer"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LaserBody:region_rect")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 16, 24 ), Rect2( 0, 0, 1418, 24 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LaserBody:position")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 0 ), Vector2( 709, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LaserTip:region_rect")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 1418, 0, 14, 24 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LaserTip:position")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 23, 0 ), Vector2( 1425, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LaserParticlesTop:modulate:a")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LaserParticlesBottom:modulate:a")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("LaserBody:modulate:a")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("LaserTip:modulate:a")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("LaserParticlesBottom:emitting")
tracks/10/interp = 1
tracks/10/imported = false
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("LaserParticlesTop:emitting")
tracks/11/interp = 1
tracks/11/imported = false
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("LaserBody:scale")
tracks/12/interp = 1
tracks/12/imported = false
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("LaserTip:scale")
tracks/13/interp = 1
tracks/13/imported = false
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("LaserBody:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 1418, 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LaserBody:position")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 709, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LaserTip:position")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1425, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LaserTip:region_rect")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 1418, 0, 14, 24 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LaserTip:scale")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LaserBody:scale")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.5 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LaserParticlesBottom:modulate:a")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LaserParticlesTop:modulate:a")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("LaserBody:modulate:a")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("LaserTip:modulate:a")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=6]

resource_name = "inactive"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -500, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 15, 12 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LaserBody:region_rect")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 16, 24 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LaserBody:position")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LaserTip:region_rect")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 1418, 0, 14, 24 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LaserTip:position")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 23, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LaserParticlesTop:modulate:a")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LaserParticlesBottom:modulate:a")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("LaserBody:modulate:a")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("LaserTip:modulate:a")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("LaserParticlesTop:emitting")
tracks/10/interp = 1
tracks/10/imported = false
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("LaserParticlesBottom:emitting")
tracks/11/interp = 1
tracks/11/imported = false
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Bullet" type="Area2D" groups=[
"bullet",
]]

z_index = 3
input_pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform2D( 1, 0, 0, 1, 715, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

position = Vector2( 715, 0 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="LaserBody" type="Sprite" parent="."]

position = Vector2( 709, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 1418, 24 )

[node name="LaserTip" type="Sprite" parent="."]

position = Vector2( 1425, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1418, 0, 14, 24 )

[node name="LaserParticlesTop" type="Particles2D" parent="."]

position = Vector2( 0, -5 )
amount = 15
lifetime = 2.3
config/process_mode = 1
texture = ExtResource( 3 )
params/direction = 90.0
params/spread = 0.1
params/linear_velocity = 600.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 90.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 2 )

[node name="LaserParticlesBottom" type="Particles2D" parent="."]

position = Vector2( 0, 4 )
amount = 15
lifetime = 2.3
config/process_mode = 1
texture = ExtResource( 3 )
params/direction = 90.0
params/spread = 0.1
params/linear_velocity = 600.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 90.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/fadeout = SubResource( 3 )
anims/fire = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/inactive = SubResource( 6 )
playback_active = true
playback_speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="IdleTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.7
one_shot = true
autostart = false

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_enter" binds=[  ]]

[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timeout" binds=[  ]]
